J_0_test/mconf/Examples/MatlabPython/buildByVisualStudio2008/mconf_matlab64.h

//typedef __int64 MC_HANDLE;  // for 64-bit architecture
typedef unsigned long long int  MC_HANDLE;
typedef unsigned int  MC_HANDLE;  // for 32-bit architecture
typedef unsigned long long int MC_HANDLE;  // for 64-bit architecture
  /// The function loads the magnetic configuration stored in the file \b fname.
  /// The function recognizes the format of the file by analyzing its contents;
  /// bc-, bc-binary-, LHD- and VMEC(wout, version>=6.20)-format are supported.
  /// For bc-format see \ref W7X_Format "W7-X format".
  /// On exit the function returns the handle of the object, that holds magnetic configuration.
  /// @param[in] fname is the name of the file to load.
  /// @return  if the function succeeds, the return value is \b non-zero, \b zero otherwise.
  /// \sa the detailed description of CStconfig::load()
  WINDLLEXPORT MC_HANDLE MCload      (char * fname);
  /// Get the B<SUB>00</SUB> value of the magnetic field on axis.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @return the B<SUB>00</SUB> value of the magnetic field on magnetic axis.
  WINDLLEXPORT double MCgetB00(MC_HANDLE mConf);
  /// Set the value of smax.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] smax is the maximum value of s for extrapolation.
  WINDLLEXPORT void   MCsetsmax(MC_HANDLE mConf,double smax);
  /// Set the value of magnetic field on magnetic axis at given cylindrical angle.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] B0 is the value[Tesla] of magnetic field to set.
  /// @param[in] ficyl is the value[radians] of cylindrical angle.
  WINDLLEXPORT void   MCsetB0 (MC_HANDLE mConf,double B0,double ficyl);
  /// Set accuracy of coordinate transformation.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] epsA is the absolute accuracy[m] of the transformation from cylindrycal to magnetic coordinates.
  /// \note the default accuracy \e epsA is 10<sup>-5</sup>m if this function is not used.
  WINDLLEXPORT void   MCsetAccuracy(MC_HANDLE mConf,double epsA);
  /// Set truncation level to reduce number of harmonics used in summation.
  /// For each flux surface this function calculates M and N
  /// such that B<SUB>mn</SUB>/B<SUB>00</SUB>>epsTrunc for m<M and |n|<N.
  /// Then only harmonics with m<M and |n|<N are used in summation.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] epsTrunc is the truncation level.
  WINDLLEXPORT void   MCtruncate   (MC_HANDLE mConf,double epsTrunc);
  /// The function returns effective radius in [m].
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] s is the normalized toroidal flux.
  WINDLLEXPORT double MCreff (MC_HANDLE mConf,double s);
  /// The function returns plasma volume V(s) in [m^3].
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] s is the normalized toroidal flux.
  /// \note Volume is negative if (s,theta,phi)-coordinate system is left handed
  WINDLLEXPORT double MCVolume(MC_HANDLE mConf,double s);
  /// The function returns the cartesian coordinates of the point.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] magCoord is the array(s,theta,phi) in magnetic coordinates
  /// @param[out] xyz is the cartesian coordinates.
  WINDLLEXPORT void   MCmag2xyz(MC_HANDLE mConf,const double *magCoord, double *xyz);
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] xyz is the input parameter with the cartesian coordinates of the point of interest.
  WINDLLEXPORT void MCxyz2mag(MC_HANDLE mConf,const double *xyz,double *mag);
  /// The function returns cartesian B-vector.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] xyz is the cartesian coordinates
  /// @param[out] B is the cartesian B-field vector
  /// @return \b s (normalized toroidal flux), which normally must satisfy \b 0<=s<=1; \n
  /// <b>1<s<sMax</b> means that the point lies in the extrapolated region,
  ///    retuned parameters are not reliable here\n
  WINDLLEXPORT double MCgetBxyz(MC_HANDLE mConf,const double *xyz,double *B);
  /// The method traces the Last Closed Magnetic Surface (LCMS).
  /// The method finds intersections of the ray with the LCMS, 
  /// where the ray is R(t)=r0+rd*t,  and t>=0.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param r0 is the Cartesian coordinates of the ray origin, must be outside with respect to the LCMS,
  /// @param rd is the direction of the ray in Cartesian coordinates,
  /// @param entryPoint this vector at return contains the Cartesian coordinates of the ray entry point into the plasma,
  /// @param exitPoint this vector at return contains the Cartesian coordinates of the ray exit point from the plasma,
  /// @return  if the function succeeds, the return value is \b non-zero; \b zero otherwise.
  WINDLLEXPORT int MCgetRayIntersectionPoints(MC_HANDLE mConf,const double *r0,const double *rd,double *entryPoint,double *exitPoint);
  
  /// The method returns the toroidal flux in Wb.
  /// @param s is the normalized toroidal flux.
  WINDLLEXPORT double MCFlux  (MC_HANDLE mConf,double s);
  

  /// The function returns the normalized poloidal flux, where s is the normalized toroidal flux.
  WINDLLEXPORT double MCtorFlux2polFlux(MC_HANDLE mConf,double s);
 /// The function returns the iota (=1/q) value , where s is the normalized toroidal flux.
  WINDLLEXPORT double MCiota(MC_HANDLE mConf,double s);
  /// The function returns the diota/ds value, where s is the normalized toroidal flux.
  WINDLLEXPORT double MCiotaPrime(MC_HANDLE mConf,double s);
  /// The method returns the poloidal current in [A].
  /// @param s is the normalized toroidal flux.
  WINDLLEXPORT double MCIp    (MC_HANDLE mConf,double s);   // poloidal current [A]
  /// The method returns the toroidal current in [A].
  /// @param s is the normalized toroidal flux.
  WINDLLEXPORT double MCIt    (MC_HANDLE mConf,double s);   // toroidal current [A]
 


  /// The function creates 3d-mesh in cylindrical coordinates.
  /// The function tabulates the magnetic field, the flux surface label, and grad(s);
  /// the \b periodicity (<b>B</b>(r,fi,z)=<b>B</b>(r,fi+period,z)) and
  ///  \b symmetry (B<sub>r</sub>(r,fi,z)=-B<sub>r</sub>(r,-fi,-z)) of the device are used.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] dr is the mesh step in r-direction.
  /// @param[in] dz is the mesh step in z-direction.
  /// @param[in] dfi is the mesh step in fi-direction, where \e fi is the cylindrical angle in radians.
  /// @return  if the function succeeds, the return value is \b non-zero; \b zero otherwise.
  /// \sa the detailed description of createMeshUsingSymmetry()
  WINDLLEXPORT int    MCcreateMeshUsingSymmetry(MC_HANDLE mConf,double dr,double dz,double dfi);
  /// The function traces the Last Closed Magnetic Surface (LCMS).
  /// The function finds intersections of the ray with the LCMS, where the
  /// ray is R(t)=r0+rd*t,  and t>=0.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] r0 is the origin of the ray, must be outside with respect to the LCMS.
  /// @param[in] rd is the direction of the ray
  /// @param[in] entryPoint this vector at return contains the coordinates of the ray entry point into the plasma.
  /// @return  if the function succeeds, the return value is \b non-zero; \b zero otherwise.
  WINDLLEXPORT int    M3DgetRayEntryPoint(MC_HANDLE mConf,const double *r0,const double *rd,double *entryPoint);
  /// The function returns cartesian B-vector.
  /// 4-points Lagrange interpolation is used.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] xyz is the cartesian coordinates
  /// @param[out] B is the cartesian B-field vector
  /// @return \b s (normalized toroidal flux), which normally satisfies \b 0<=s<=1; \n
  /// <b>1<s<sMax</b> means that the point lies in the extrapolated region,
  ///    retuned parameters are not reliable here; \n
  /// \b s>1000 means that the point lies outside the \b sMax. \n
  ///  The extrapolated region is needed in order to do interpolation near LCMS, see also setsMax(),getsMax().
  WINDLLEXPORT double M3DgetBxyz     (MC_HANDLE mConf,const double *xyz,double *B);
  
  //***************************************************************
  // get B and derivatives dB/dx,dB/dy,dB/dz at the point xyz
  //  Input:
  //    Vector3d xyz -- cartesian coordinates
  //  Output:
  //    Vector3d dBdx -- dB/dx, where dBdx(1)=dBx/dx, dBdx(2)=dBy/dx, dBdx(3)=dBz/dx
  //    Vector3d dBdy -- dB/dy
  //    Vector3d dBdz -- dB/dz
  //    Vector3d B    -- cartesian coordinates of B
  //    Vector3d grads -- cartesian coordinates of grad(s)
  //  Return:   s
  //
  WINDLLEXPORT double M3DgetdB_Gradsxyz(MC_HANDLE mConf,const double *xyz,double *B,double *dBdx,double *dBdy,double *dBdz,double *gradS);
  
  //***************************************************************
  // get B and derivatives dB/dx,dB/dy,dB/dz at the point xyz
  //  Input:
  //    Vector3d xyz -- cartesian coordinates
  //  Output:
  //    Vector3d dBdx -- dB/dx, where dBdx(1)=dBx/dx, dBdx(2)=dBy/dx, dBdx(3)=dBz/dx
  //    Vector3d dBdy -- dB/dy
  //    Vector3d dBdz -- dB/dz
  //    Vector3d B    -- cartesian coordinates of B
  //    Vector3d grads -- cartesian coordinates of grad(s)
  //  Return:   s
  //
  WINDLLEXPORT double MCgetdB_Gradsxyz(MC_HANDLE mConf,const double *xyz,double *B,double *dBdx,double *dBdy,double *dBdz,double *gradS);
  /// Get B and gradients in cartesian coordinates
  ///  @param[in] Vector3d magCoord(s,theta,phi) is a point in magnetic coordinates,
  ///  @param[out]  B  is the magnetic field  in cartesian coordinates
  ///  @param[out]  gradB  is the grad(|B|) in cartesian coordinates
  ///  @param[out]  gradS  is the grad(s)
  ///  @param[out]  gradTh is the grad(theta)
  ///  @param[out]  gradPh is the grad(phi) 
  WINDLLEXPORT void MCgetBandGradientsxyz(MC_HANDLE mConf,const double *magCoord, double *B, 
                               double *gradB, double *gradS, double *gradTh, double *gradPh);